# electromagnetic-knot-visualizer

./: CMakeLists.txt  README.md
src/: main.cpp  math.hpp  shaders.hpp  simulation.cu  simulation.hpp
